--- a/styles.css
+++ b/styles.css
@@ -38,14 +38,30 @@ body {
   text-align: center;
 }
 
-.projects-section-header { 
+h1 { 
   font-size: 15rem;
 }
 
-.project-title {
+h2 {
   font-size: 10rem;
 }
 
-.project-title:hover {
+ /* unvisited link */
+a:link {
   color: var(--primary-color);
 }
+
+/* visited link */
+a:visited {
+  color: var(--primary-color);
+}
+
+/* mouse over link */
+a:hover {
+  color: var(--primary-color);
+}
+
+/* selected link */
+a:active {
+  color: var(--primary-color);
+} 
